# mi-haels-badiebadumdumdumdumdumdumdumdumdumdumdum

./: .gitignore  asciimini.py  cfb.py  discordbot.py  fortunes.txt  main.py  misfortunes.txt  niceto.who  pyproject.toml  readme.md  token.env  type.py
assets/catgame/: level_legend
assets/catgame/levels/: maze.level
assets/textFiles/: 8ball.8  disses.4u  fortunes.txt  misfortunes.txt
commands/: cat game.py  catgame.py  fight.py  mafia.py
